feat: updated test harness with identifer upload supprt

--- a/sdk-based-test-harness/config/sdk-dfsp1/api-svc.env
+++ b/sdk-based-test-harness/config/sdk-dfsp1/api-svc.env
@@ -51,6 +51,9 @@ CACHE_EXPIRY_SECONDS=3600
 # The option 'PEER_ENDPOINT' has no effect if the remaining options 'ALS_ENDPOINT', 'QUOTES_ENDPOINT',
 # 'BULK_QUOTES_ENDPOINT', 'TRANSFERS_ENDPOINT', 'BULK_TRANSFERS_ENDPOINT', 'TRANSACTION_REQUESTS_ENDPOINT' are specified.
 PEER_ENDPOINT=ttk-hub:4040
+ALS_ENDPOINT=ttk-hub:4040
+FX_QUOTES_ENDPOINT=ttk-hub:4040
+FX_TRANSFERS_ENPOINT=ttk-hub:4040
 
 # BACKEND ENDPOINT
 ## To use TTK acting like a core connector, use the following
@@ -77,6 +80,7 @@ AUTO_ACCEPT_QUOTES=false
 # but will halt the transer after a party lookup response is received. A further
 # cnofirmation call will be required to progress the transfer to quotes state.
 AUTO_ACCEPT_PARTY=true
+AUTO_ACCEPT_PARTICIPANTS_PUT=true 
 
 # if set to false the SDK will not automatically accept a resolved party on a requestToPay operation
 # but will halt the operation after a party lookup response is received. A further
@@ -130,7 +134,7 @@ ALLOW_TRANSFER_WITHOUT_QUOTE=false
 # To enable request for notification on fulfiled transfer
 RESERVE_NOTIFICATION=true
 # resources API versions should be string in format: "resourceOneName=1.0,resourceTwoName=1.1"
-RESOURCE_VERSIONS="transfers=2.0,participants=1.1,quotes=2.0,parties=2.0,transactionRequests=2.0"
+RESOURCE_VERSIONS="transfers=2.0,participants=2.0,quotes=2.0,parties=2.0,transactionRequests=2.0"
 
 # Management API websocket connection settings.
 # The Management API uses this for exchanging connector management messages.
