--- a/sdk-based-test-harness/core-connector.env
+++ b/sdk-based-test-harness/core-connector.env
@@ -1,30 +1,34 @@
-#DO NOT CHANGE THIS PART
-SDK_BASE_URL=http://dfsp1-sdk-api-svc:4001
-FSP_ID=dfsp1
-DFSP_SERVER_HOST=0.0.0.0
-DFSP_SERVER_PORT=3004
+# === Server Settings ===
 SDK_SERVER_HOST=0.0.0.0
 SDK_SERVER_PORT=3003
-DFSP_API_SPEC_FILE=./src/api-spec/core-connector-api-spec-dfsp.yml
-SDK_API_SPEC_FILE=./src/api-spec/core-connector-api-spec-sdk.yml
+CBS_NAME=tnm-mw-dfsp-cc
+DFSP_SERVER_HOST=0.0.0.0
+DFSP_SERVER_PORT=3004
+DFSP_API_SPEC=./src/api-spec/send-money-api.yaml
+SDK_API_SPEC_FILE=./api-spec/core-connector-api-spec-sdk.yml
+MODE=dfsp  # or fxp
 
-# CBS Config. Paste your env vars below
-MTN_BASE_URL=sandbox.momodeveloper.mtn.com # can be a mocked backend.
-MTN_COLLECTION_API_KEY=b1207baca1d343b581cc21346904c707
-MTN_COLLECTION_CLIENT_ID=c87a6e02-aa8c-4eaf-827a-d5d90e744241
-MTN_COLLECTION_SUBSCRIPTION_KEY=5f40c404bf0c4e4f9b37e533d4993dd7
-MTN_DISBURSEMENT_API_KEY=1188de4fcff9436f826cd1151985d7fe
-MTN_DISBURSEMENT_CLIENT_ID=980fa27a-16dc-4432-b589-7733a02008cf
-MTN_DISBURSEMENT_SUBSCRIPTION_KEY=85ce32bfcd8a44aaab993ebac601ff46
-MTN_TARGET_ENVIRONMENT=sandbox
+# === SDK Scheme Adapter ===
+SDK_BASE_URL=http://dfsp1-sdk-api-svc:4001
+
+# === CBS Settings ===
+FSP_ID=bluebank
+LEI=1234567890ABCDEFGHIJK
+CURRENCY=XXX
 SUPPORTED_ID_TYPE=MSISDN
-CBS_NAME=MTN
-X_COUNTRY=UG
-X_CURRENCY=EUR
-SERVICE_CHARGE=0
+
+# === CBS Config Settings ===
+CBS_NAME=TNM_Connector
+# TNM_BASE_URL=https://devpayouts.tnmmpamba.co.mw/api
+TNM_BASE_URL=http://dfsp-api:4010
+TNM_WALLET=506080
+TNM_PASSWORD=M89z9RdmGW5PUSN8
+SUPPORTED_ID_TYPE=MSISDN
+SENDING_SERVICE_CHARGE=3
+RECEIVING_SERVICE_CHARGE=2.5
+TNM_CURRENCY=MWK
 EXPIRATION_DURATION=1
-HTTP_TIMEOUT=5000
-MTN_ENV=staging
-DFSP_CURRENCY=UGX
-CONNECTOR_NAME=MTN-UG
-LEI=529900T8BM49AURSDO55
+TRANSACTION_ENQUIRY_WAIT_TIME=10000
+FSP_ID=tnmmalawi
+LEI=tnmmalawi
+X_COUNTRY=Malawi
