feat: add tests for abort and timeout and minor enhancements

--- a/sdk-based-test-harness/core-connector.env
+++ b/sdk-based-test-harness/core-connector.env
@@ -14,7 +14,7 @@ SDK_BASE_URL=http://dfsp1-sdk-api-svc:4001
 # === CBS Settings ===
 FSP_ID=bluebank
 LEI=1234567890ABCDEFGHIJK
-CURRENCY=XXX
+CURRENCY=MWK
 SUPPORTED_ID_TYPE=MSISDN
 
 # === CBS Config Settings ===
@@ -32,3 +32,6 @@ TRANSACTION_ENQUIRY_WAIT_TIME=10000
 FSP_ID=tnmmalawi
 LEI=tnmmalawi
 X_COUNTRY=Malawi
+TRANSACTION_EXECUTION_RETRIES=2
+HTTP_TIMEOUT=3000
+WAIT_TIME=1000
