feat: added testing support for subId Oracle

--- a/sdk-based-test-harness/config/sdk-dfsp2/api-svc.env
+++ b/sdk-based-test-harness/config/sdk-dfsp2/api-svc.env
@@ -54,7 +54,7 @@ PEER_ENDPOINT=ttk-hub:4040
 
 # BACKEND ENDPOINT
 ## To use TTK acting like a core connector, use the following
-BACKEND_ENDPOINT=ttk-dfsp2:4040/backend
+BACKEND_ENDPOINT=core-connector2:3003
 ## Real core connector
 #BACKEND_ENDPOINT=core-connector2:3003
 
