--- a/sdk-based-test-harness/core-connector.env
+++ b/sdk-based-test-harness/core-connector.env
@@ -14,24 +14,11 @@ SDK_BASE_URL=http://dfsp1-sdk-api-svc:4001
 # === CBS Settings ===
 FSP_ID=bluebank
 LEI=1234567890ABCDEFGHIJK
-CURRENCY=MWK
+CURRENCY=GMD
 SUPPORTED_ID_TYPE=MSISDN
 
 # === CBS Config Settings ===
-CBS_NAME=TNM_Connector
-# TNM_BASE_URL=https://devpayouts.tnmmpamba.co.mw/api
-TNM_BASE_URL=http://dfsp-api:4010
-TNM_WALLET=506080
-TNM_PASSWORD=M89z9RdmGW5PUSN8
-SUPPORTED_ID_TYPE=MSISDN
-SENDING_SERVICE_CHARGE=3
-RECEIVING_SERVICE_CHARGE=2.5
-TNM_CURRENCY=MWK
-EXPIRATION_DURATION=1
-TRANSACTION_ENQUIRY_WAIT_TIME=10000
-FSP_ID=tnmmalawi
-LEI=tnmmalawi
-X_COUNTRY=Malawi
-TRANSACTION_EXECUTION_RETRIES=2
-HTTP_TIMEOUT=3000
-WAIT_TIME=1000
+BLUE_BANK_URL=https://api.bluebank.mw
+BLUE_BANK_CLIENT_ID=my-bluebank-client-id
+BLUE_BANK_CLIENT_SECRET=my-bluebank-client-secret
+CURRENCY_MODE=single # or multiple
